@@ -1,3 +1,8 @@
+2004-09-10  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Format.pm:  (put)  Support PARENT and PATH
+	substitutions.
+
 2004-09-09  Michael Yount <csf@moscow.com>
 
 	* lib/Majordomo.pm:  (archive_start)  Initialize to avoid
